--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^9.0.2",
     "daisyui": "^3.5.0"
   }
 }
